Revise IDE run/debug instructions for JavaFX
Updated instructions for running/debugging in IDEs with VM parameters for JavaFX.